fix swagger spec, add thera endpoint, reorganize services
