# server/api/controllers/wormhole/router.js
@@ -1,0 +1,7 @@
+import * as express from 'express';
+import controller from './controller';
+
+
+export default express
+  .Router()
+  .get('/thera', controller.nearestTheraEntrance);
