# server/api/services/wormhole.service.js
@@ -1,0 +1,9 @@
+import EveService from './eve.service';
+
+class WormholeService {
+  nearestTheraEntrance(systemName) {
+    return Promise.all([EveService.search(systemName, 'false', 'solar_system'), EveService.eveScout()]).then(searchJSON => searchJSON);
+  }
+}
+
+export default new WormholeService();
